# email-ai-env

./: .gitignore  Dockerfile  LICENSE  README.md  inference.py  openenv.yaml  pyproject.toml  requirements.txt  test_env.py
env/: environment.py  models.py  tasks.py
server/: app.py
