[project]
name = "email-ai-env"
version = "0.1.0"
description = "AI Email Assistant OpenEnv environment"
authors = [
    { name = "Devanshi Chhajed" }
]
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "openenv-core>=0.2.0"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project.scripts]
server = "server.app:main"